Fix alignment of repo buttons

--- a/app/assets/stylesheets/pages/projects.scss
+++ b/app/assets/stylesheets/pages/projects.scss
@@ -218,7 +218,7 @@
     }
 
     @media (max-width: 1304px) {
-      top: -6px;
+      top: 0;
     }
   }
 
